# dataflow-guard

./: .gitignore  LICENSE  Makefile  README.md  hybrid_result.json  hybrid_test_result.json  test_customers.csv
.github/workflows/: build.yml  ci.yml  security.yml
backend/: Dockerfile  README.md  alembic.ini  e2e_test.py  env.example  pyproject.toml  pytest.ini  requirements.txt  simple_test.py
backend/alembic/: env.py
backend/dto_api/: __init__.py  db.py  main.py
backend/dto_api/adapters/: __init__.py
backend/dto_api/adapters/connectors/: __init__.py  postgres_stub.py  snowflake.py  snowflake_stub.py
backend/dto_api/db/: __init__.py  models.py
backend/dto_api/models/: __init__.py  catalog.py  reports.py  settings.py  tests.py
backend/dto_api/policies/: __init__.py  pii_redaction.py  sql_preview_off.py
backend/dto_api/routers/: catalog.py  datasets.py  etl.py  health.py  hybrid_test.py  metadata.py  pipeline_test.py  pipeline_test_v2.py  runs.py  sep.py  settings.py  tests.py  zero_sql.py
backend/dto_api/schemas/: __init__.py  ai_schemas.json
backend/dto_api/services/: ai_adapter_iface.py  artifact_service.py  catalog_import.py  compile_service.py  etl_test_engine.py  hybrid_test_engine.py  local_ollama.py  openai_adapter.py  planner.py  report_generator.py  runner.py  runner_stub.py  sse_service.py  vllm_adapter.py  zero_sql_service.py
backend/dto_api/telemetry/: __init__.py  logging.py  metrics.py
backend/dto_cli/: __init__.py  main.py
backend/tests/: __init__.py  test_ai_local_adapters.py  test_catalog.py  test_compile_service.py  test_health.py  test_json_compilation.py  test_readyz.py  test_runner_persistence.py  test_security.py  test_snowflake_integration.py  test_snowflake_security.py
docs/: DFG_Phase1.5_Snowflake_SinglePrompt.md  DFG_Repo_Audit.json  DFG_Repo_Audit.md  DOCKER_SETUP.md  DTO_BRD_TDR_v1.2.md  DTO_Cursor_Dev_Prompt_Phase0-1.md  PHASE_1.5_SNOWFLAKE_IMPLEMENTATION.md
frontend/: .env.local.example  .eslintrc.json  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/__tests__/: testSelectionStore.test.ts  testSelectionToggle.test.ts  workspaceStore.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(routes)/builder/: page.tsx
frontend/app/(routes)/datasets/: page.tsx
frontend/app/(routes)/runs/: page.tsx
frontend/app/(routes)/settings/: page.tsx
frontend/app/settings/connections/: page.tsx
frontend/app/workbench/: page.tsx  page_broken.tsx  page_broken_final.tsx
frontend/components/: Sidebar.tsx  navigation.tsx  query-provider.tsx  runs-table.tsx  stats-cards.tsx
frontend/components/common/: EmptyState.tsx  ErrorBoundary.tsx  StatusChip.tsx
frontend/components/panels/: DatasetPanel.tsx  EditorPanel.tsx  PlanPanel.tsx  ResultsPanel.tsx  RunConsole.tsx
frontend/components/ui/: checkbox.tsx  select.tsx  tabs.tsx
frontend/hooks/: use-toast.ts
frontend/src/: App.tsx  index.css
frontend/stores/: workspace.ts
infra/: docker-compose.yml
infra/helm/dto/: Chart.yaml  values.yaml
infra/terraform/: main.tf
